# manim-eng

./: .pre-commit-config.yaml  CITATION.cff  README.md  conftest.py  docstring_guide.md  pyproject.toml
src/: scene.py
src/manim_eng/: __init__.py  implementation.py
src/manim_eng/_base/: __init__.py  anchor.py  component.py  mark.py  markable.py  terminal.py  voltage.py  wire.py
src/manim_eng/_config/: __init__.py  config.py  config_readers.py
src/manim_eng/_debug/: __init__.py  anchor.py
src/manim_eng/_utils/: __init__.py  utils.py
src/manim_eng/circuit/: __init__.py  circuit.py  voltage.py  wire.py
src/manim_eng/circuit/base/: wire.py
src/manim_eng/component/: __init__.py  _component.py  component.py  resistor.py
src/manim_eng/components/: __init__.py  capacitor.py  capacitors.py  cells.py  diodes.py  inductor.py  inductors.py  monopoles.py  node.py  resistor.py  resistors.py  sources.py  switches.py  xkcd.py
src/manim_eng/components/_component/: __init__.py  component.py  mark.py  terminal.py
src/manim_eng/components/base/: __init__.py  bipole.py  component.py  modifiers.py  monopole.py  source.py  switch.py  terminal.py
tests/: circuit_test.py  component_test.py  conftest.py  mark_test.py  markable_test.py  node_test.py  test_component.py  test_config_base.py  test_config_readers.py  test_mark.py  test_markable.py  test_utils.py  utils_test.py  wire_test.py
tests/config_tests/: tempconfig_eng_test.py  test_config_base.py  test_tempconfig_eng.py
tests/test_utils/: dummy_component.py
