[tool.poetry]
name = "manim-eng"
version = "0.1.0"
description = "A Manim CE plugin for engineering communication"
authors = ["overegneered <git@egneer.ing>"]
readme = "README.md"
packages = [{include = "manim_eng", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
manim = ">=0.18.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
pre-commit = "^3.8.0"
pytest = "^8.3.2"

[tool.poetry.plugins."manim.plugins"]
"manim_eng" = "manim_eng"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
fix = true
extend-exclude = [
    "media",
]

[tool.ruff.lint]
select = [
    "E", # Pycodestyle errors
    "W", # Pycodestyle warnings
    "I", # Import sorting
    "N", # Enforce PEP-8 naming
    "D", # Docstring convention enforcing
    "B", # Flake8 bugbears
    "A", # Builtin shadowing
    "COM", # Comma problems
    "C4", # Unnecessary complexity
    "ISC", # String concatenation
    "PIE", # Misc. lints
    "PT", # Pytest lints
    "Q", # Quotes
    "RET", # return-related lints
    "SIM", # Possible simplifications
    "ARG", # Unused arguments
    "ERA", # Commented-out code
    "PL", # Pylint
    "NPY", # NumPy lints
    "RUF", # Ruff lints
]
ignore = [
    # Required to allow manim-eng to mirror Manim's `from manim import *` usage style.
    "F403",
    # Deactivated for compatibility with the formatter,
    # as outlined here: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111", "E114", "E117",
    "D206", "D300",
    "Q000", "Q001", "Q002", "Q003",
    "COM812", "COM819",
    "ISC001", "ISC002",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"{tests/*,conftest.py}" = [
    # Do not require docstrings for every 'public' function/class/method/module/package that is actually for testing
    "D1",
]
